--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,21 @@
 {
-    "name": "yiisoft/yii2-app-basic",
-    "description": "Yii 2 Basic Application Template",
-    "keywords": ["yii2", "framework", "basic", "application template"],
-    "homepage": "http://www.yiiframework.com/",
+    "name": "philippfrenzel/karaokekings",
+    "description": "Karaoke Catalogue by Song or Artist",
+    "keywords": ["yii2", "karaoke", "catalogue"],
+    "homepage": "http://www.frenzel.net/",
     "type": "project",
-    "license": "BSD-3-Clause",
+    "license": "Apache v2",
     "support": {
-        "issues": "https://github.com/yiisoft/yii2/issues?state=open",
-        "forum": "http://www.yiiframework.com/forum/",
-        "wiki": "http://www.yiiframework.com/wiki/",
-        "irc": "irc://irc.freenode.net/yii",
-        "source": "https://github.com/yiisoft/yii2"
+        "issues": "https://github.com/philippfrenzel/karaokekings/issues?state=open",
+        "source": "https://github.com/philippfrenzel/karaokekings"
     },
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.4.0",
         "yiisoft/yii2": "*",
         "yiisoft/yii2-bootstrap": "*",
-        "yiisoft/yii2-swiftmailer": "*"
+        "yiisoft/yii2-swiftmailer": "*",
+        "frenzelgmbh/appcommon":"dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
