--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "yiisoft/yii2": "*",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
-        "frenzelgmbh/appcommon":"dev-master"
+        "frenzelgmbh/appcommon":"dev-master",
+        "kop/yii2-scroll-pager": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
