--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
         "frenzelgmbh/appcommon":"dev-master",
+        "frenzelgmbh/scms":"dev-master",
         "kop/yii2-scroll-pager": "dev-master"
     },
     "require-dev": {
